BNF_CFGv2
program : statement SEMI
        | statement SEMI program

statement : io_statement
          | goto_statement
          | assignment_statement

io_statement : input_statement
             | output_statement

input_statement : ID EQUALS INPUT
output_statement : OUTPUT EQUALS expr

goto_statement : GOTO expr

assignment_statement : ID EQUALS expr

expr : term
     | term MOD term

term : part
     | part PLUS part
     | part MINUS part

part : smallpart
     | smallpart MUL smallpart
     | smallpart DIV smallpart

smallpart : factor
          | factor POW factor

factor : PLUS factor
       | MINUS factor
       | NUMBER
       | LPAREN expr RPAREN
       | variable


variable: ID
